salesforce/force-app/main/default/objects/WFC27_Trip_Packet__c/WFC27_Trip_Packet__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Sync Packet Membership</label><nameField><displayFormat>MEMBER-{000000}</displayFormat><label>Membership Number</label><type>AutoNumber</type></nameField><pluralLabel>WFC27 Sync Packet Memberships</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>