salesforce/force-app/main/default/objects/WFC27_Trip_Packet__c/fields/Direction__c.field-meta.xml
<CustomField><fullName>Direction__c</fullName><label>Direction</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Sent</fullName><default>false</default><label>Sent</label></value><value><fullName>Received</fullName><default>false</default><label>Received</label></value></valueSetDefinition></valueSet></CustomField>