salesforce/force-app/main/default/objects/WFC27_Trip_Packet__c/fields/Packet__c.field-meta.xml
<CustomField><fullName>Packet__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Sync Packet</label><referenceTo>WFC27_Station__c</referenceTo><relationshipLabel>Sync Memberships</relationshipLabel><relationshipName>Sync_Memberships</relationshipName><type>Lookup</type></CustomField>