salesforce/force-app/main/default/objects/WFC27_Trip_Packet__c/fields/Trip__c.field-meta.xml
<CustomField><fullName>Trip__c</fullName><label>Sync</label><referenceTo>WFC27_Trip__c</referenceTo><relationshipLabel>Sync Packets</relationshipLabel><relationshipName>Sync_Packets</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>